<resources>
    <string name="app_name">Lend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_owing">Devendo</string>
    <string name="menu_paid">Pagos</string>
    <string name="menu_all">Todos</string>
    <string name="name">Nome</string>
    <string name="supost_owing_name">Andrew Lavigen Bierviere</string>
    <string name="owing_date_label">Data do emprestimo</string>
    <string name="supost_owing_date">05/05/2021</string>
    <string name="value_money">Total do emprestimo R$</string>
    <string name="supost_total_value">20,00</string>
    <string name="title_activity_form">Formulário de empréstimo</string>
    <string name="payment_value">Valor pago R$</string>
    <string name="loan">Resta</string>
    <string name="save">Salvar</string>
    <string name="to_pay">Pagar</string>
    <string name="confirmation">Confirmação</string>
    <string name="remove_debtor">Remoção de devedor!</string>
    <string name="really_want_remove">Você tem certeza que deseja excluir este devedor?</string>
    <string name="remove">Remover</string>
    <string name="cancel">Cancelar</string>
</resources>