<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_owing">

    <fragment
        android:id="@+id/nav_owing"
        android:name="com.joelysondavid.lend.ui.woing.OwingFragment"
        android:label="@string/menu_owing"
        tools:layout="@layout/fragment_owing" />

    <fragment
        android:id="@+id/nav_paid"
        android:name="com.joelysondavid.lend.ui.paid.PaidFragment"
        android:label="@string/menu_paid"
        tools:layout="@layout/fragment_paid" />

    <fragment
        android:id="@+id/nav_all"
        android:name="com.joelysondavid.lend.ui.all.AllFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_all" />
</navigation>