<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.LendFormActivity">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_owing_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supost_owing_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/text_owing_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_owing_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/owing_date_label"
        app:layout_constraintBottom_toTopOf="@+id/edit_owing_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_total_amount"
        app:layout_constraintTop_toBottomOf="@id/edit_owing_name" />


    <EditText
        android:id="@+id/edit_owing_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/supost_owing_date"
        android:inputType="date"
        android:paddingHorizontal="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/edit_total_value"
        app:layout_constraintTop_toBottomOf="@id/text_owing_date" />

    <TextView
        android:id="@+id/text_total_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/value_money"
        app:layout_constraintLeft_toRightOf="@id/text_owing_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_owing_date" />

    <EditText
        android:id="@+id/edit_total_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/supost_total_value"
        android:inputType="numberDecimal"
        android:paddingHorizontal="20dp"
        app:layout_constraintLeft_toRightOf="@id/edit_owing_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_total_amount" />


    <TextView
        android:id="@+id/text_loan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/loan"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_payment_amount"
        app:layout_constraintTop_toTopOf="@id/text_payment_amount" />

    <TextView
        android:id="@+id/text_remaining"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/edit_payment_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_payment_amount"
        app:layout_constraintTop_toTopOf="@id/edit_payment_amount" />

    <TextView
        android:id="@+id/text_payment_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/payment_value"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/text_total_amount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_total_value" />

    <EditText
        android:id="@+id/edit_payment_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/edit_total_value"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_payment_amount" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>